# ImGuiFileDialog

./: .clang-format  .gitignore  .gitmodules  BUILD  BUILD.bazel  CMakeLists.txt  CODE_OF_CONDUCT.md  CustomFont.cpp  CustomFont.h  CustomFont.ifs  CustomImGuiFileDialogConfig.h  CustomImWidgetsConfig.h  DemoDialog.cpp  DemoDialog.h  Documentation.md  FileSystemBoost.hpp  ImGuiFileDialog.cpp  ImGuiFileDialog.d  ImGuiFileDialog.h  ImGuiFileDialog.sln  ImGuiFileDialog.vcxproj  ImGuiFileDialogConfig.h  ImWidgets.cpp  Jenkinsfile  LICENSE  MODULE.bazel  README.md  WORKSPACE  imgui_file_dlg.cpp  imgui_file_dlg.h  imgui_impl_glfw_gl3.cpp  main.cpp  mainAndroid.cpp  mainWinLinuxMacos.cpp  premake5.lua
.github/: FUNDING.yml
.github/workflows/: Build_Linux.yml  Build_Osx.yml  Build_Win.yml  Leak.yml  Linux.yml  Linux_Clang.yml  Linux_Gcc.yml  Osx.yml  Osx_Clang.yml  Osx_Gcc.yml  Win.yml  Win_Clang.yml  Win_Msvc.yml  codeql-analysis.yml  full_sources.yml
.jenkins/: Jenkinsfile_LINUX  Jenkinsfile_WINDOWS
ImGuiFileDialog/: CMakeLists.txt  ImGuiFileDialog.cpp  ImGuiFileDialog.h  ImGuiFileDialogConfig.h
android/: build.gradle  gradle.properties
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/: MainActivity.kt
cmake/: 3rdparty.cmake  boost.cmake  config.cmake  glad.cmake  glfw.cmake  imgui.cmake  imwidgets.cmake
file_dialog/: ImGuiFileDialog.cpp  ImGuiFileDialog.h
idea/: new_api.md
meshs/: cube.gltf  file_without_bin.gltf  ico_plane.gltf
samples/: pp.a.b  titi.a.b
samples/unicode/: chinese_Ä║.txt
src/gui/: DemoDialog.cpp  DemoDialog.h
src/headers/: CustomImGuiFileDialogConfig.h  CustomImWidgetsConfig.h
src/res/: Roboto_Medium.cpp  Roboto_Medium.h
tests/: CMakeLists.txt  main.cpp
tests/ImGuiFileDialog/: Test_FileManager.cpp  Test_FileManager.h  Test_FileStyle.cpp  Test_FileStyle.h  Test_FilterManager.cpp  Test_ImGuiFileDialog.cpp  Test_ImGuiFileDialog.h  Test_Utils.cpp  Test_Utils.h
tests/ImGuiFileDialog/FilterManager/: Test_FilterManager.cpp  Test_FilterManager.h
visualTests/: CMakeLists.txt  main.cpp
visualTests/src/tests/: DialogTests.cpp  DialogTests.h
